[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "shukhratbekovb",email = "shukhratbekovb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
