[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "shukhratbekovb",email = "shukhratbekovb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "greenlet (>=3.5.3,<4.0.0)",
    "alembic (>=1.18.5,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
